force-app/main/default/objects/eagleview__Order__c.object
<CustomObject>
    <fields>
        <fullName>eagleview__Area__c</fullName>
        <inlineHelpText>Total area, according to the report (sq).</inlineHelpText>
        <label>Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eagleview__Cost__c</fullName>
        <inlineHelpText>Total cost of the report.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eagleview__Eaves__c</fullName>
        <inlineHelpText>Total length of all eaves, according to the report (ft).</inlineHelpText>
        <label>Eaves</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eagleview__Hips__c</fullName>
        <inlineHelpText>Total length of all hips, according to the report (ft).</inlineHelpText>
        <label>Hips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eagleview__InitialOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The field is automatically set if the current order is the result of another order upgrade.</inlineHelpText>
        <label>Initial EagleView Order</label>
        <referenceTo>eagleview__Order__c</referenceTo>
        <relationshipLabel>Upgraded EagleView Order</relationshipLabel>
        <relationshipName>EagleView_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eagleview__IsChangesInLastFourYears__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if there have been changes at this address in the past 4 years.</inlineHelpText>
        <label>Changes In Last 4 Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eagleview__OrderedDate__c</fullName>
        <label>Ordered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>eagleview__OwnerEmail__c</fullName>
        <formula>IF( 
  ISBLANK(Owner:User.Id),
  Owner:Queue.Email,
  Owner:User.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__Pitch__c</fullName>
        <inlineHelpText>Primary pitch, according to the report.</inlineHelpText>
        <label>Pitch</label>
        <length>133</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PromoCode__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PropertyCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PropertyCountryCode__c</fullName>
        <formula>CASE(
    TEXT(eagleview__PropertyCountry__c),
    &quot;United States&quot;, &quot;US&quot;,
    &quot;Canada&quot;, &quot;CA&quot;,
    &quot;&quot;
)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PropertyCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eagleview__PropertyPostalCode__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PropertyStateCode__c</fullName>
        <formula>CASE(
    TEXT(eagleview__PropertyState__c),
    &quot;Alabama&quot;, &quot;AL&quot;,
    &quot;Alaska&quot;, &quot;AK&quot;,
    &quot;Arizona&quot;, &quot;AZ&quot;,
    &quot;Arkansas&quot;, &quot;AR&quot;,
    &quot;California&quot;, &quot;CA&quot;,
    &quot;Colorado&quot;, &quot;CO&quot;,
    &quot;Connecticut&quot;, &quot;CT&quot;,
    &quot;Delaware&quot;, &quot;DE&quot;,
    &quot;Florida&quot;, &quot;FL&quot;,
    &quot;Georgia&quot;, &quot;GA&quot;,
    &quot;Hawaii&quot;, &quot;HI&quot;,
    &quot;Idaho&quot;, &quot;ID&quot;,
    &quot;Illinois&quot;, &quot;IL&quot;,
    &quot;Indiana&quot;, &quot;IN&quot;,
    &quot;Iowa&quot;, &quot;IA&quot;,
    &quot;Kansas&quot;, &quot;KS&quot;,
    &quot;Kentucky&quot;, &quot;KY&quot;,
    &quot;Louisiana&quot;, &quot;LA&quot;,
    &quot;Maine&quot;, &quot;ME&quot;,
    &quot;Maryland&quot;, &quot;MD&quot;,
    &quot;Massachusetts&quot;, &quot;MA&quot;,
    &quot;Michigan&quot;, &quot;MI&quot;,
    &quot;Minnesota&quot;, &quot;MN&quot;,
    &quot;Mississippi&quot;, &quot;MS&quot;,
    &quot;Missouri&quot;, &quot;MO&quot;,
    &quot;Montana&quot;, &quot;MT&quot;,
    &quot;Nebraska&quot;, &quot;NE&quot;,
    &quot;Nevada&quot;, &quot;NV&quot;,
    &quot;New Hampshire&quot;, &quot;NH&quot;,
    &quot;New Jersey&quot;, &quot;NJ&quot;,
    &quot;New Mexico&quot;, &quot;NM&quot;,
    &quot;New York&quot;, &quot;NY&quot;,
    &quot;North Carolina&quot;, &quot;NC&quot;,
    &quot;North Dakota&quot;, &quot;ND&quot;,
    &quot;Ohio&quot;, &quot;OH&quot;,
    &quot;Oklahoma&quot;, &quot;OK&quot;,
    &quot;Oregon&quot;, &quot;OR&quot;,
    &quot;Pennsylvania&quot;, &quot;PA&quot;,
    &quot;Rhode Island&quot;, &quot;RI&quot;,
    &quot;South Carolina&quot;, &quot;SC&quot;,
    &quot;South Dakota&quot;, &quot;SD&quot;,
    &quot;Tennessee&quot;, &quot;TN&quot;,
    &quot;Texas&quot;, &quot;TX&quot;,
    &quot;Utah&quot;, &quot;UT&quot;,
    &quot;Vermont&quot;, &quot;VT&quot;,
    &quot;Virginia&quot;, &quot;VA&quot;,
    &quot;Washington&quot;, &quot;WA&quot;,
    &quot;West Virginia&quot;, &quot;WV&quot;,
    &quot;Wisconsin&quot;, &quot;WI&quot;,
    &quot;Wyoming&quot;, &quot;WY&quot;,
    &quot;Alberta&quot;, &quot;AB&quot;,
    &quot;British Columbia&quot;, &quot;BC&quot;,
    &quot;Manitoba&quot;, &quot;MB&quot;,
    &quot;New Brunswick&quot;, &quot;NB&quot;,
    &quot;Newfoundland and Labrador&quot;, &quot;NL&quot;,
    &quot;Nova Scotia&quot;, &quot;NS&quot;,
    &quot;Ontario&quot;, &quot;ON&quot;,
    &quot;Prince Edward Island&quot;, &quot;PE&quot;,
    &quot;Quebec&quot;, &quot;QC&quot;,
    &quot;Saskatchewan&quot;, &quot;SK&quot;,
    &quot;Northwest Territories&quot;, &quot;NT&quot;,
    &quot;Nunavut&quot;, &quot;NU&quot;,
    &quot;Yukon&quot;, &quot;YT&quot;,
    &quot;&quot;
)</formula>
        <label>State/Province Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__PropertyState__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>eagleview__PropertyCountry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eagleview__PropertyStreet__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__Rakes__c</fullName>
        <inlineHelpText>Total length of all rakes, according to the report (ft).</inlineHelpText>
        <label>Rakes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eagleview__ReportClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eagleview__ReportId__c</fullName>
        <inlineHelpText>Unique report identifier generated by EagleView after the order is placed</inlineHelpText>
        <label>Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__ReportReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eagleview__ReportType__c</fullName>
        <label>Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__Ridges__c</fullName>
        <inlineHelpText>Total length of all ridges , according to the report (ft).</inlineHelpText>
        <label>Ridges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eagleview__StatusDescription__c</fullName>
        <inlineHelpText>Last Received Status Description</inlineHelpText>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__StatusId__c</fullName>
        <inlineHelpText>Last Received Status Id</inlineHelpText>
        <label>Status Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__SubStatusDescription__c</fullName>
        <inlineHelpText>Last Received Sub-status Description</inlineHelpText>
        <label>Sub-status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__SubStatusId__c</fullName>
        <inlineHelpText>Last Received Sub-status Id</inlineHelpText>
        <label>Sub-status Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eagleview__Valleys__c</fullName>
        <inlineHelpText>Total length of all valleys, according to the report (ft).</inlineHelpText>
        <label>Valleys</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>EagleView Order</label>
    <listViews>
        <fullName>eagleview__All</fullName>
        <columns>NAME</columns>
        <columns>eagleview__ReportId__c</columns>
        <columns>eagleview__PropertyStreet__c</columns>
        <columns>eagleview__PropertyCity__c</columns>
        <columns>eagleview__PropertyStateCode__c</columns>
        <columns>eagleview__PropertyPostalCode__c</columns>
        <columns>eagleview__ReportType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>eagleview__NotYetPlaced</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eagleview__ReportId__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not Yet Placed</label>
    </listViews>
    <listViews>
        <fullName>eagleview__StandardPlaced</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eagleview__ReportId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>eagleview__ReportReceived__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>eagleview__InitialOrder__c</field>
            <operation>equals</operation>
        </filters>
        <label>Standard Placed</label>
    </listViews>
    <listViews>
        <fullName>eagleview__StandardReceived</fullName>
        <columns>NAME</columns>
        <columns>eagleview__ReportType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eagleview__ReportId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>eagleview__ReportReceived__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>eagleview__InitialOrder__c</field>
            <operation>equals</operation>
        </filters>
        <label>Standard Received</label>
    </listViews>
    <listViews>
        <fullName>eagleview__UpgradePlaced</fullName>
        <columns>NAME</columns>
        <columns>eagleview__ReportType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eagleview__ReportId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>eagleview__ReportReceived__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>eagleview__InitialOrder__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Upgrade Placed</label>
    </listViews>
    <listViews>
        <fullName>eagleview__UpgradeReceived</fullName>
        <columns>NAME</columns>
        <columns>eagleview__ReportType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eagleview__ReportId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>eagleview__ReportReceived__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>eagleview__InitialOrder__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Upgrade Received</label>
    </listViews>
    <nameField>
        <displayFormat>EVO-{00000}</displayFormat>
        <label>EagleView Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EagleView Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>